# clip-hist

./: CHANGELOG.md  DEV_DOC.md  README.md  package-lock.json  package.json  vite.config.ts
.trae/skills/update-changelog/: SKILL.md
docs/: windows-usage.html
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  history.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  lib.rs  lib.rs.bak  main.rs
src/components/: ActionsDialog.tsx  EditDialog.tsx  HistoryGridItem.tsx  HistoryListItem.tsx  PreviewPane.tsx  SettingsDialog.tsx
src/lib/: utils.ts
web-home/: index.html  package-lock.json  package.json  tailwind.config.js
web-home/src/: App.vue  style.css
web-home/src/i18n/: index.ts
