[package]
name = "clip-hist"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "clip_hist_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.5.5", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
arboard = { version = "3.2" }
chrono = { version = "0.4.31", features = ["serde"] }
image = "0.24"
base64 = "0.21"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-single-instance = "2"

# Pinned dependencies to support Rust 1.78.0
globset = { version = "=0.4.15" }
indexmap = { version = "=2.10.0" }
time = { version = "=0.3.36" }
plist = { version = "=1.6.0" }
url = { version = "=2.5.0" }
idna = { version = "=0.5.0" }
rayon = { version = "=1.10.0" }
rayon-core = { version = "=1.12.1" }
half = { version = "=2.3.1" }
tauri-plugin-os = "2"
enigo = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-only crates moved behind a platform cfg to avoid compiling on Windows
security-framework = { version = "=3.0.0" }
window-vibrancy = "0.7.1"
cocoa = "0.26.1"
objc = "0.2.7"
native-tls = { version = "=0.2.11" }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
